# HylexCrypt-TU2050

./: README.md  changelog.md  pubkey.asc.gpg  pyproject.toml
.github/workflows/: codeql.yml
docs/: index.md  research.md  usage.md
hylexcrypt/: __init__.py  _version.py  cli.py  core.py
ref/: Hylexcrypt_ultimate_2050.py
